[project]
name = "yolo-rock-paper-scissors"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=1.1.2",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "roboflow>=1.2.11",
    "torch>=2.9.0",
    "ultralytics>=8.3.227",
]
